# season27

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  package-lock.json  package.json  playwright.config.ts  pyproject.toml  railway.json  tsconfig.json
.github/workflows/: ci.yml
app/: __init__.py  clock.py  config.py  main.py  runtime.py  scoring.py  seasons.py
app/admin/: service.py
app/auth/: service.py
app/db/: __init__.py  models.py  session.py
app/leaderboard/: service.py
app/predictions/: __init__.py  service.py
app/standings/: refresh.py  service.py  source.py
app/static/: app.css
app/swaps/: service.py
app/teams/: __init__.py  service.py
docs/: DEPLOYMENT.md  LAUNCH_CHECKLIST.md  REHEARSAL.md
frontend/: app.ts
migrations/: env.py
migrations/versions/: 20260710_01_initial_season.py  20260712_02_authentication.py  20260713_03_team_roster.py  20260713_04_remove_roster_approval.py  20260713_05_prediction_drafts.py  20260713_06_prediction_submission.py  20260716_07_swap_engine.py  20260716_08_standings.py  20260716_09_standings_refresh.py  20260716_10_admin_corrections.py
scripts/: e2e_server.py  rehearsal.py  reset_staging.py  seed_development.py  start.py
tests/: conftest.py
tests/e2e/: lifecycle.spec.ts
tests/fixtures/: bbc_table.html
tests/integration/: test_admin_routes.py  test_leaderboard_routes.py  test_prediction_routes.py  test_routes.py  test_seed.py  test_seed_script.py  test_swap_routes.py
tests/unit/: test_admin.py  test_auth.py  test_clock.py  test_config.py  test_predictions.py  (+8 more)
(+1 files in other folders)
