[project]
name = "season27"
version = "0.1.0"
description = "Private Premier League 2026/27 prediction game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=23.1,<26",
  "beautifulsoup4>=4.13,<5",
  "python-fasthtml>=0.12,<1",
  "pydantic-settings>=2.7,<3",
  "requests>=2.32,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pillow>=11,<13",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
season27 = "app.main:run"
season27-seed = "scripts.seed_development:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=app --cov=scripts --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app", "scripts"]

[[tool.mypy.overrides]]
module = ["fasthtml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.main"]
disable_error_code = ["untyped-decorator"]
